--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,17 @@ jobs:
   build:
     docker:
       # specify the version here
-      - image: circleci/elixir:1.4
+      - image: circleci/elixir:1.6.1
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
-
+    - image: circleci/postgres:10.1-alpine  # database image
+            environment:  # environment variables for database
+              POSTGRES_USER: postgres
+              POSTGRES_DB: hello
+              POSTGRES_PASSWORD: postgres
     working_directory: ~/repo
     steps:
       - checkout
