--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
-      - image: circleci/postgres:10.1-alpine  # database image
+      - image: circleci/postgres:9.4  # database image
           environment:  # environment variables for database
             POSTGRES_USER: postgres
             POSTGRES_DB: hello
