--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,17 +6,17 @@ jobs:
   build:
     docker:
       # specify the version here
-      - image: circleci/elixir:1.6.1
+      - image: bitwalker/alpine-elixir-phoenix:1.6.1
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
-      - image: circleci/postgres:9.4  # database image
-          environment:  # environment variables for database
-            POSTGRES_USER: postgres
-            POSTGRES_DB: hello
-            POSTGRES_PASSWORD: postgres
+      # - image: circleci/postgres:9.4  
+      #     environment: 
+      #       POSTGRES_USER: postgres
+      #       POSTGRES_DB: hello
+      #       POSTGRES_PASSWORD: postgres
     working_directory: ~/repo
     steps:
       - checkout
