--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
-      # - image: circleci/postgres:9.4  
-      #     environment: 
+      - image: postgres:10.2-alpine  
+        environment: 
       #       POSTGRES_USER: postgres
       #       POSTGRES_DB: hello
-      #       POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: postgres
     working_directory: ~/repo
     steps:
       - checkout
