--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run: mix deps.get
       - run: elixir --version
       - run: mix phx.new -v
       # - run: mix deps.get
