--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,10 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: mix deps.get
+      - run: mix local.hex --force
+      - run: mix archive.install https://github.com/phoenixframework/archives/raw/master/phx_new.ez --force
       - run: elixir --version
+      - run: mix deps.get
       - run: mix phx.new -v
       # - run: mix deps.get
       # - run: mix ecto.create
